@@ -1,3 +1,8 @@
+2013-11-27 Miguel de Dios  <miguel.dedios@artica.es>
+	
+	* godmode/setup/update_manager.php: added new parameters required
+	for the update manager server.
+
 2013-11-26 Dario Rodriguez <dario@artica.es>
 
 	* include/styles/integria.css: Added new styles to
